Added files for "CodeHub"...
These files failed to make a commit on the intial website...still it was created so adding it to github..

--- a/src/index.html
+++ b/src/index.html
@@ -4,133 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-    />
+
     <link rel="stylesheet" href="style.css" />
-    <title>Codilarity</title>
-    <link rel="shortcut icon" type="image/png" href="fevicon.png" />
+
+    <title>Artific AI</title>
   </head>
   <body>
-    <div class="row">
-      <div class="name"><a href class="logo">Codilarity</a></div>
-      <div class="menu">
-        <ul class="nav__list row">
-          <li class="nav__item"><a href="#">Home</a></li>
-          <li class="nav__item"><a href="#">About</a></li>
-          <li class="nav__item"><a href="#">Blog</a></li>
-          <li class="nav__item"><a href="#">Sign In</a></li>
-        </ul>
-      </div>
-    </div>
-    <br /><br /><br />
+    <section class="head container">
+      <h1 class="page--header">Code<span>Hub.</span></h1>
+      <h2>
+        <span>Welcome to Code</span>Hub, the next-gen tool for developers.
+      </h2>
+    </section>
 
-    <main class="hero__content">
-      <div class="hero__title">
-        <h1>
-          Hey, It's <br />
-          <span>Codilarity</span> here
-        </h1>
-        <h6>Singularity of coding, Code fast with Codilarity</h6>
-        <form action="#">
-          <input class="btn" type="button" value="Get Started" />
+    <section class="login__main container row">
+      <div class="signIn container">
+        <h5>
+          <span>Sign In</span> <br />
+          with Social Accounts
+        </h5>
+        <div class="row loginWithSocial">
+          <button class="facebook">Sign Up with Facebook</button>
+          <button class="google">Sign Up with Google</button>
+        </div>
+      </div>
+      <div class="v1"></div>
+      <div class="logIn container">
+        <h4 class="log__in">Log In</h4>
+        <form action="" class="row login__form">
+          <input
+            type="email"
+            class="email__input"
+            placeholder="Enter your E-mail"
+            autofocus
+          />
+          <input
+            type="password"
+            class="password__input"
+            placeholder="Enter your password"
+          />
+          <input type="button" class="login__btn" value="Log In" />
+          <p class="dontHaveAccount">
+            <a href="signUp.html" class="form__inputs"
+              >Not a member? Join Here!</a
+            >
+          </p>
+          <p class="forgotPassword">
+            <a href="#" class="form__inputs">Forgot Password?</a>
+          </p>
         </form>
       </div>
-      <br /><br /><br />
-      <div class="hero__text">
-        <h3>
-          To code is to be productive. <br />
-          <br />
-          <span>Codes were never meant for just nerds!</span>
-        </h3>
-        <div class="hidden">
-          <h4 class="codilaritySpan">
-            <span>Codilarity</span> lets developers focus more on productivity
-          </h4>
-          <h4 class="wmpSpan">
-            <span>World’s most powerful</span> AIs brought together to get you
-            ahead on thrust.
-          </h4>
-        </div>
-      </div>
-    </main>
-    <section class="codingForEveryone">
-      <div class="section__content">
-        <h1>Let the coding be for everyone</h1>
-        <div class="yourCodeYourCommand">
-          <h3>Your code, your command.</h3>
-          <img src="val_img1.png" alt="Your code, your command." class="img" />
-        </div>
-      </div>
     </section>
-    <section class="newAddiction">
-      <div class="section__content">
-        <h1>Your new addiction</h1>
-        <div class="featuresBox">
-          <div class="features codeFlipper">
-            <h5><span>Code flipper.</span> Convert code between languages</h5>
-          </div>
-          <div class="features codroid">
-            <h5><span>Codroid.</span> Talk to your code</h5>
-          </div>
-          <div class="features opticode">
-            <h5><span>Opticode.</span> Improve your code performance</h5>
-          </div>
-          <div class="features sqlizer">
-            <h5><span>SQLizer.</span> Fastens up your sql mine</h5>
-          </div>
-          <div class="features bugfix">
-            <h5><span>BugFix.</span> solves bugs using bug report</h5>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="askYourCode">
-      <div class="section__content">
-        <img src="val_img2.png" alt="askYourCode" class="img" />
-        <h1>Ask your code</h1>
-      </div>
-    </section>
-    <br /><br /><br />
-    <section class="footer">
-      <h1>Code your imaginations</h1>
-      <form action="#">
-        <input class="btn" type="button" value="Get Started" />
-      </form>
-    </section>
-
-    <p style="text-align: center">Follow us on:</p>
-    <div class="social-buttons">
-      <a
-        href="#"
-        class="social-buttons__button social-button social-button--facebook"
-        aria-label="Facebook"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a
-        href="#"
-        class="social-buttons__button social-button social-button--linkedin"
-        aria-label="LinkedIn"
-      >
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-      <a
-        href="#"
-        class="social-buttons__button social-button social-button--snapchat"
-        aria-label="SnapChat"
-      >
-        <i class="fab fa-snapchat-ghost"></i>
-      </a>
-      <a
-        href="#"
-        class="social-buttons__button social-button social-button--github"
-        aria-label="GitHub"
-      >
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
